# Bezel_Surface_3D

./: README.md
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  Shader.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
